traces/bug_239.txt
examples++-load/ffnewuoa.cpp:194: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/ffnewuoa.cpp:194:1: initialization of callDoLoadInit
192.   
193.   }
194. > LOADFUNC(Load_Init)

examples++-load/ffnewuoa.cpp:194:1: call to DoLoadInit
192.   
193.   }
194. > LOADFUNC(Load_Init)

examples++-load/ffnewuoa.cpp:194:1: call to addInitFunct
  192.   
  193.   }
  194. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
